--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ doctest = false
 path = "src/lib/lib.rs"
 
 [dependencies]
+virt = "0.3.0"
 dotenv = "0.15.0"
 prost = "0.11.9"
 prost-types = "0.11.9"
@@ -23,7 +24,8 @@ tonic-reflection = "0.9.2"
 tokio-test = "0.4.2"
 anyhow = "1.0.71"
 tokio = { version = "1.0", features = ["tracing", "rt-multi-thread", "macros"] }
-
+regex = "1.8.4"
+lazy_static = "1.4.0"
 [dev-dependencies]
 ctor = "0.2.3"
 [build-dependencies]
