--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,9 @@ tokio-test = "0.4.2"
 rstest = "0.17.0"
 [build-dependencies]
 tonic-build = { version = "0.9.2", features = ["prost"] }
+
+[package.metadata.cross.target.aarch64-unknown-linux-gnu]
+pre-build = ["dpkg --add-architecture arm64 && apt-get update && apt-get install --assume-yes protobuf-compiler:arm64 libvirt-dev:arm64 libvirt-glib-1.0-dev:arm64 libvirt-ocaml-dev"]
+
+[package.metadata.cross.target.x86_64-unknown-linux-gnu]
+pre-build = ["apt-get -y update && apt-get install --assume-yes protobuf-compiler libvirt-dev libvirt-glib-1.0-dev libvirt-ocaml-dev"]
