--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ tokio = { version = "1.0", features = ["parking_lot", "sync", "tracing", "rt-mul
 regex = "1.8.4"
 lazy_static = "1.4.0"
 config = { version = "0.13.3", features = ["toml"] }
+once_cell = { version = "1.18.0", features = ["parking_lot"] }
 
 [dependencies.uuid]
 version = "1.4.0"
@@ -40,8 +41,14 @@ rstest = "0.17.0"
 [build-dependencies]
 tonic-build = { version = "0.9.2", features = ["prost"] }
 
-[package.metadata.cross.target.aarch64-unknown-linux-gnu]
-pre-build = ["dpkg --add-architecture arm64 && apt-get update && apt-get install --assume-yes protobuf-compiler:arm64 libvirt-dev:arm64 libvirt-glib-1.0-dev:arm64 libvirt-ocaml-dev"]
+#[package.metadata.cross.target.aarch64-unknown-linux-gnu]
+#dockerfile = "./Dockerfile.cross-arm64"
 
+#[package.metadata.cross.target.x86_64-unknown-linux-gnu]
+#dockerfile = "./Dockerfile.cross-amd64"
+
+[package.metadata.cross.target.aarch64-unknown-linux-gnu]
+pre-build = ["dpkg --add-architecture arm64 && apt-get update && apt-get install --assume-yes protobuf-compiler:arm64 libvirt-dev:arm64 libvirt-glib-1.0-dev:arm64 libvirt-ocaml-dev libvirt0"]
+#
 [package.metadata.cross.target.x86_64-unknown-linux-gnu]
-pre-build = ["apt-get -y update && apt-get install --assume-yes protobuf-compiler libvirt-dev libvirt-glib-1.0-dev libvirt-ocaml-dev"]
+pre-build = ["apt-get -y update && apt-get install --assume-yes protobuf-compiler libvirt-dev libvirt-glib-1.0-dev libvirt-ocaml-dev libvirt0"]
