--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,8 @@ regex = "1.8.4"
 lazy_static = "1.4.0"
 config = { version = "0.13.3", features = ["toml"] }
 once_cell = { version = "1.18.0", features = ["parking_lot"] }
-
+serde = { version = "1.0.171", features = ["derive"] }
+toml = "0.7.6"
 [dependencies.uuid]
 version = "1.4.0"
 features = [
